Reinstate FFMPEG logging in a way that respects new FFMPEG design and usage across various Krita systems.

Logs are always rendered in a temp directory. When an error occurs, the log will be copied to the
desired video output directory.

BUG:436725